Fix jdk16 issues