@@ -71,6 +71,7 @@ CATALINA_OPTS="-Duser.language=es \
 -Duser.country=ES \
 -Djava.security.auth.login.config=$TOMCAT_CONFDIR/login.config \
 -Djavax.xml.validation.SchemaFactory:http://www.w3.org/2001/XMLSchema=com.sun.org.apache.xerces.internal.jaxp.validation.XMLSchemaFactory"
+JDK_JAVA_OPTIONS="--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"
 EOF
 
 	echo
